--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 add_executable(test
 test.c
+spi_nb.c
 gyro.c
 )
 pico_enable_stdio_usb(test 1)
 pico_enable_stdio_uart(test 1)
 pico_add_extra_outputs(test)
-target_link_libraries(test pico_stdlib hardware_spi hardware_i2c)
+target_link_libraries(test pico_stdlib hardware_spi hardware_structs)
 
 add_custom_target(Flash
     DEPENDS test
